# TerraFusionSync

./: .env.duo.example  .env.example  .replit  .replit.mod  .replit.monitoring  .replit.new  .replit.syncservice  .replit.terrafusion  .replit.websocket  DEPLOYMENT_STRATEGY.md  DEPLOYMENT_SUMMARY.md  DUO_SECURITY_IMPLEMENTATION_COMPLETE.md  Dockerfile  GIS_EXPORT_IMPLEMENTATION.md  GIS_EXPORT_IMPLEMENTATION_SUMMARY.md  GIS_EXPORT_TESTS.md  GIS_EXPORT_TEST_README.md  MONITORING.md  PACS_INTEGRATION_PRD.md  PRD.md  PRD_TerraFusion_Platform.md  README-AZURE.md  README-CLI.md  README.md  README_IT.md  README_PACS_INTEGRATION.md  README_QUICKSTART_WINDOWS.md  RUST_MIGRATION_PLAN.md  WORKSPACE_CLEANUP_REPORT.md  api_documentation.json  api_extensions.py  app.py  app_azure.py  app_insights_integration.py  architecture.md  azure-migration.ps1  backup_scheduler.py  benton-wa_export.geojson  benton_district_lookup.py  bootstrap_components.json  (+117 more)
ai/narrator_ai/: Cargo.toml
ai/narrator_ai/src/: config.rs  main.rs  ollama_client.rs  routes.rs
apps/backend/syncservice/: manifest.yaml  project.json  pyproject.toml  run_with_port.py  start.py  sync_service_runner.py  workflow_starter.py
apps/backend/syncservice/src/syncservice/: __init__.py  field_mapping.yaml  main.py
apps/backend/syncservice/syncservice/: __init__.py  auth.py  main.py
apps/backend/syncservice/syncservice/adapters/: __init__.py  erp_adapter.py  pacs_adapter.py
apps/backend/syncservice/syncservice/api/: __init__.py  compatibility.py  dashboard.py  health.py  sync.py
apps/backend/syncservice/syncservice/config/: __init__.py  field_mapping_gis_cama.yaml  field_mapping_pacs_cama.yaml  field_mapping_pacs_erp.yaml  system_config.py
apps/backend/syncservice/syncservice/core/: __init__.py  change_detector.py  sync_engine.py  transformer.py
apps/backend/syncservice/syncservice/interfaces/: __init__.py  system_adapter.py
apps/backend/syncservice/syncservice/models/: __init__.py  base.py  database.py
apps/backend/syncservice/syncservice/monitoring/: __init__.py  metrics.py  sync_tracker.py  system_monitoring.py
apps/backend/syncservice/syncservice/static/: api.html  index.html  metrics.html
apps/backend/syncservice/syncservice/utils/: __init__.py  database.py
apps/backend/syncservice/tests/: __init__.py  test_api.py  test_self_healing.py  test_transformer.py
archive/directories/terrarust/api_gateway/: Cargo.toml
archive/directories/terrarust/api_gateway/src/: config.rs  errors.rs  main.rs
archive/directories/terrarust/api_gateway/templates/: dashboard.hbs  gis_export_dashboard.hbs  index.hbs  layout.hbs
archive/directories/terrarust/common/: Cargo.toml
archive/directories/terrarust/common/src/: lib.rs
archive/directories/terrarust/management_console/: Cargo.toml
archive/directories/terrarust/management_console/src/: main.rs
archive/directories/terrarust/setup_utility/: Cargo.toml
archive/directories/terrarust/setup_utility/src/: config.rs  main.rs  services.rs  validation.rs
terrarust/: Cargo.toml  deploy.sh
terrarust/api_gateway/: Cargo.toml
terrarust/api_gateway/src/: config.rs  main.rs
terrarust/api_gateway/src/api/: mod.rs
terrarust/api_gateway/src/handlers/auth/: mod.rs
terrarust/api_gateway/src/handlers/gis/: mod.rs
terrarust/api_gateway/src/handlers/health/: mod.rs
terrarust/api_gateway/src/handlers/metrics/: mod.rs
terrarust/api_gateway/src/handlers/sync_operations/: mod.rs
terrarust/api_gateway/src/handlers/sync_pairs/: mod.rs
terrarust/api_gateway/src/handlers/users/: mod.rs
terrarust/api_gateway/src/middleware/auth/: mod.rs
terrarust/api_gateway/src/middlewares/: auth.rs  rate_limit.rs  security.rs
terrarust/api_gateway/src/routes/: api.rs  mod.rs  system.rs  ui.rs
terrarust/api_gateway/src/routes/api/: auth.rs
terrarust/api_gateway/src/routes/gis/: mod.rs
terrarust/api_gateway/src/routes/sync/: mod.rs
terrarust/api_gateway/src/services/: gis_export.rs  mod.rs  sync_service.rs
terrarust/api_gateway/static/css/: terrafusion.css
terrarust/api_gateway/templates/: login.hbs  sync_dashboard.hbs
terrarust/common/: Cargo.toml
terrarust/common/src/: lib.rs
terrarust/common/src/config/: mod.rs
terrarust/common/src/database/: .mod.rs._NcIo90_6_lyQG1mUBD5U~  mod.rs
terrarust/common/src/error/: mod.rs
terrarust/common/src/errors/: mod.rs
terrarust/common/src/models/: geo.rs  mod.rs  sync.rs
terrarust/common/src/models/gis_export/: mod.rs
terrarust/common/src/models/sync_operation/: mod.rs
terrarust/common/src/schema/: mod.rs
terrarust/common/src/telemetry/: mod.rs
terrarust/common/src/utils/: mod.rs
terrarust/config/: default.toml
terrarust/gis_export/: Cargo.toml
terrarust/gis_export/src/: main.rs  models.rs  service.rs
terrarust/gis_export/src/handlers/: mod.rs
terrarust/gis_export/src/handlers/counties/: mod.rs
terrarust/gis_export/src/handlers/exports/: mod.rs
terrarust/gis_export/src/models/: database.rs  mod.rs
terrarust/gis_export/src/services/: mod.rs
terrarust/migrations/2023-05-01-000000_initial_schema/: up.sql
terrarust/migrations/2023-05-02-000000_seed_initial_data/: up.sql
terrarust/service_wrapper/: Cargo.toml
terrarust/setup_utility/src/: database.rs  firewall.rs
terrarust/sync_service/: Cargo.toml
terrarust/sync_service/src/: config.rs  main.rs
terrarust/sync_service/src/api/: mod.rs
terrarust/sync_service/src/api/sync_pairs/: mod.rs
terrarust/sync_service/src/database/: mod.rs
terrarust/sync_service/src/database/sync_operations/: mod.rs
terrarust/sync_service/src/database/sync_pairs/: mod.rs
terrarust/sync_service/src/handlers/: mod.rs
terrarust/sync_service/src/handlers/health/: mod.rs
terrarust/sync_service/src/handlers/metrics/: mod.rs
terrarust/sync_service/src/handlers/sync_operations/: mod.rs
terrarust/sync_service/src/handlers/sync_pairs/: mod.rs
terrarust/sync_service/src/models/: mod.rs
terrarust/sync_service/src/routes/: api.rs  mod.rs  sync_operations.rs
terrarust/sync_service/src/services/: conflict_resolver.rs  mod.rs  scheduler.rs  sync_engine.rs
(+702 files in other folders)
