[workspace]
members = [
    "api_gateway",
    "sync_service",
    "gis_export",
    "common"
]

[workspace.dependencies]
tokio = { version = "1.35.1", features = ["full"] }
actix-web = "4.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
config = "0.13"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"
uuid = { version = "1.6", features = ["v4", "serde"] }
r2d2 = "0.8"
futures = "0.3"
async-trait = "0.1"
geo = "0.27"
geojson = "0.24"
gdal = "0.15"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.5"
prometheus = "0.13"
opentelemetry = { version = "0.20", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.19", features = ["rt-tokio"] }
reqwest = { version = "0.11", features = ["json"] }
jsonwebtoken = "8.3"
actix-cors = "0.6"
actix-rt = "2.9"
once_cell = "1.18"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"