[workspace]
members = [
    "common",
    "api_gateway",
    "sync_service",
    "gis_export",
]

[workspace.dependencies]
# Shared dependencies across all workspace members
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
dotenv = "0.15"

# Database dependencies
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate", "offline"] }
diesel = { version = "2.1", features = ["postgres", "r2d2", "chrono", "uuid", "serde_json"] }

# Web framework dependencies
actix-web = { version = "4.3", features = ["openssl"] }
actix-service = "2.0"
actix-http = "3.3"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Geospatial processing
geo = "0.23"
geojson = "0.24"
gdal = "0.14"

[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.test]
opt-level = 0
debug = true