[workspace]
members = [
    "common",
    "api_gateway", 
    "sync_service",
    "gis_export",
    "setup_utility",
    "management_console",
    "service_wrapper"
]

[workspace.dependencies]
# Core dependencies with optimized versions
tokio = { version = "1.28", features = ["rt-multi-thread", "macros", "fs", "net", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
dotenv = "0.15"

# Database dependencies
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# Web framework dependencies  
actix-web = { version = "4.3", features = ["rustls"] }
actix-service = "2.0"
actix-http = "3.3"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Windows-specific dependencies
windows-service = "0.6"
winapi = { version = "0.3", features = ["winsvc", "winuser", "shellapi"] }

[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false

[profile.release-with-debug]
inherits = "release"
debug = true
strip = "none"