[package]
name = "narrator-ai"
version = "0.1.0"
edition = "2021"
authors = ["TerraFusion Team"]
description = "AI-powered natural language processing service for TerraFusion Platform"

[dependencies]
# Web framework
actix-web = { version = "4.4", features = ["openssl"] }
actix-rt = "2.9"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client for Ollama
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.14"
dotenv = "0.15"

# Logging
log = "0.4"
env_logger = "0.10"

# Metrics
prometheus = { version = "0.13", features = ["process"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true