[package]
name = "gis_export"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio = { workspace = true }
actix-web = { workspace = true }
actix-cors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
diesel = { workspace = true }
chrono = { workspace = true }
dotenv = { workspace = true }
config = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-actix-web = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
geo = { workspace = true }
geojson = { workspace = true }
gdal = { workspace = true }
prometheus = { workspace = true }
opentelemetry = { workspace = true }
tokio-util = { workspace = true }
anyhow = { workspace = true }