[package]
name = "terrafusion-gis-export"
version = "0.1.0"
edition = "2021"
authors = ["TerraFusion Team"]
description = "GIS Export Service for the TerraFusion Platform"

[dependencies]
# Common library
terrafusion-common = { path = "../common" }

# Core frameworks
actix-web = { version = "4.3", features = ["openssl"] }
actix-service = "2.0"
actix-http = "3.3"
actix-files = "0.6"

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.6", features = ["runtime-actix-rustls", "postgres", "uuid", "chrono", "json", "migrate", "offline"] }

# Async
tokio = { version = "1.28", features = ["full"] }
futures = "0.3"
futures-util = "0.3"

# Logging
log = "0.4"
env_logger = "0.10"
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.13"
dotenv = "0.15"

# Utility
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
lazy_static = "1.4"
derive_more = "0.99"
num_cpus = "1.15"
rand = "0.8"

# HTTP clients
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
openssl = { version = "0.10" }

# Geospatial processing
geo = "0.23"
geojson = "0.24"
shapefile = "0.4"
wkt = "0.10"
gdal = { version = "0.14", features = ["array"] }
proj = "0.27"

# File handling
zip = "0.6"
tempfile = "3.5"
csv = "1.2"
xml-rs = "0.8"

# Metrics and monitoring
prometheus = "0.13"
metrics = "0.20"
metrics-exporter-prometheus = "0.11"

[dev-dependencies]
actix-rt = "2.8"
claim = "0.5"
fake = { version = "2.5", features = ["derive", "chrono", "uuid"] }
quickcheck = "1.0"
quickcheck_macros = "1.0"
wiremock = "0.5"
once_cell = "1.17"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true