[package]
name = "sync_service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Internal dependencies
common = { path = "../common" }

# Web framework
actix-web = "4.3"
actix-rt = "2.8"
actix-cors = "0.6"

# Async
tokio = { version = "1.28", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
diesel = { version = "2.1", features = ["postgres", "r2d2", "chrono", "uuid", "serde_json"] }
diesel-derive-enum = { version = "2.1", features = ["postgres"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.10"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Telemetry and metrics
prometheus = "0.13"
tracing = "0.1"