[package]
name = "terrafusion-api-gateway"
version = "0.1.0"
edition = "2021"
authors = ["TerraFusion Team"]
description = "API Gateway for the TerraFusion Platform"

[dependencies]
# Core frameworks
actix-web = { version = "4.3", features = ["openssl"] }
actix-files = "0.6"
actix-service = "2.0"
actix-http = "3.3"

# Templating
handlebars = { version = "4.3", features = ["dir_source"] }

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.6", features = ["runtime-actix-rustls", "postgres", "uuid", "chrono", "json", "migrate", "offline"] }
diesel = { version = "2.1", features = ["postgres", "r2d2", "chrono", "uuid", "serde_json"] }
diesel_migrations = "2.1"

# Authentication
jsonwebtoken = "8.3"
bcrypt = "0.14"
rust-argon2 = "1.0"

# Async
tokio = { version = "1.28", features = ["full"] }
futures = "0.3"
futures-util = "0.3"

# Logging
log = "0.4"
env_logger = "0.10"
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.13"
dotenv = "0.15"

# Utility
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
lazy_static = "1.4"
derive_more = "0.99"
num_cpus = "1.15"
rand = "0.8"

# HTTP clients
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
openssl = { version = "0.10" }

# Metrics and monitoring
prometheus = "0.13"
metrics = "0.20"
metrics-exporter-prometheus = "0.11"

# Web security
actix-identity = "0.5"
actix-session = { version = "0.7", features = ["cookie-session"] }
time = "0.3"

[dev-dependencies]
actix-rt = "2.8"
claim = "0.5"
fake = { version = "2.5", features = ["derive", "chrono", "uuid"] }
quickcheck = "1.0"
quickcheck_macros = "1.0"
wiremock = "0.5"
once_cell = "1.17"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

# Remove workspace definition - this is handled by the root Cargo.toml