[package]
name = "terrafusion-common"
version = "0.1.0"
edition = "2021"
authors = ["TerraFusion Team"]
description = "Common library for the TerraFusion Platform"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
diesel = { version = "2.1", features = ["postgres", "r2d2", "chrono", "uuid", "serde_json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
tracing = "0.1"

# Async
tokio = { version = "1.28", features = ["full"] }
futures = "0.3"

# Web
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
url = "2.3"

# Utility
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
dotenv = "0.15"
rand = "0.8"

# Metrics and monitoring
prometheus = "0.13"
metrics = "0.20"

# Geo processing
geo = "0.23"
geojson = "0.24"
shapefile = "0.4"
wkt = "0.10"
gdal = "0.14"
proj = "0.27"

[dev-dependencies]
mockall = "0.11"
tokio-test = "0.4"